--- a/index.html
+++ b/index.html
@@ -14,20 +14,35 @@
     <p>Samina Nazneen</p>
     <p>Course Id:WB2302027</p>
     <hr>
-    <a href="#contact">Contact us</a>
+    <a href="#contact">Contact with us</a>
     <h3 align="center" style="background-color:black; color:aliceblue">Fast Foods</h3>
     <ul>
         <li><a href="#ff">Fast Foods</a></li>
         <dl>
             <dt><a href="#bg">Burger</a></dt>
-            <dd>Do you like burgers? Give the answer here and write a short note about it.(Everyone's answer must be
-                unique).</dd>
+            <dd>Do you like burgers? Give the answer here and write a short note about it.</dd>
+            <p>Yes, I do like burgers. A burger is a popular sandwich featuring a cooked ground meat patty served
+                between two slices of bread. It can be made from ground beef, chicken, turkey, or plant-based
+                alternatives. Burgers offer versatility in customization, offering a wide range of buns,
+                toppings, and fillings. They are flavorful, satisfying, and convenient, combining juicy meat with savory
+                ingredients, often found in fast-food chains and restaurants for quick meals.</p>
             <dt><a href="#pz">Pizza</a></dt>
-            <dd>Do you like pizza? Give the answer here and write a short note about it.(Everyone's answer must be
-                unique).</dd>
+            <dd>Do you like pizza? Give the answer here and write a short note about it.</dd>
+            <p>Pizza is my favourite. Pizza is a flat bread dough base baked in an oven, typically made from wheat
+                flour, water, yeast, salt, and olive oil. The base is thin and crispy, while the toppings can vary based
+                on personal preferences and regional variations. It offers a delicious flavor profile with a combination
+                of savory sauce, melted cheese, and diverse toppings. Pizzas are cooked in high-temperature ovens,
+                resulting in a hot, melty, and flavorful dish. They are often served in slices, making them easy to eat
+                and share. Pizza is enjoyed worldwide, both in casual settings and high-end restaurants, offering a
+                versatile and satisfying meal option for people of all ages.</p>
             <dt><a href="#fr">French Fries</a></dt>
-            <dd>Do you like french fries? Give the answer here and write a short note about it.(Everyone's answer
-                must be unique).</dd>
+            <dd>Do you like french fries? Give the answer here and write a short note about it.</dd>
+            <p>French fries are my go-to option for a casual dining! French fries are a popular side dish made from
+                deep-fried potatoes, resulting in a crispy golden exterior and soft interior. They are typically long,
+                thin, and seasoned with salt or spices. They are often found in fast-food restaurants, diners, and food
+                stalls, but can also be made at home using deep fryers or oven-baking methods.French fries are enjoyed
+                by many due to their crispy texture, versatility as a standalone snack or side dish, and delicious
+                flavor.</p>
         </dl>
         <hr>
     </ul>
@@ -54,12 +69,20 @@
         <li><a href="#dd">Desserts</a></li>
         <dl>
             <dt><a href="#ck">Chocolate Cake</a></dt>
-            <dd>Do you like chocolate cake? Give the answer here and write a short note about it.(Everyone's answer must
-                be
-                unique).</dd>
+            <dd>Do you like chocolate cake? Give the answer here and write a short note about it.</dd>
+            <p>A chocolate cake is a must for my birthday. Nothing beats a good chocolate cake melting in your mouth on
+                a good day. Chocolate cake is a moist, rich dessert with chocolate as its main flavor. It is made by
+                combining cocoa powder or melted chocolate with flour, sugar, eggs, butter, or oil, and leavening
+                agents. The cake is baked in the oven until it rises and forms a soft, tender crumb. The addition of
+                chocolate frosting enhances the overall taste of baked cake, providing a sweet and chocolaty element.
+            </p>
             <dt><a href="#pd">Pudding</a></dt>
-            <dd>Do you like pudding? Give the answer here and write a short note about it.(Everyone's answer must be
-                unique).</dd>
+            <dd>Do you like pudding? Give the answer here and write a short note about it.</dd>
+            <p>Pudding is one of my favourite dessert and a must-have option after dinner or lunch gathering. People
+                love pudding! Its creamy and smooth texture provides a satisfying eating experience. It is made from milk, cream, sugar, and a
+                thickening agent. Flavors like chocolate, vanilla, butterscotch, caramel, or fruit can be added to
+                create variations. Pudding is versatile and can be layered with cookies or fruit, used as a filling for
+                pies or pastries, or as a base for trifles and parfaits. </p>
         </dl>
         <hr>
     </ul>
@@ -115,7 +138,7 @@
         labeling or describing data in a column or row.</p>
     <p>Which tag defines a hyperlink in html? Write your answer here.</p>
     <p>-The 'a' tag defines a hyperlink in HTML.</p>
-  <!-- Samina Nazneen
+    <!-- Samina Nazneen
   Course Id:WB2302027
   Mentor: Shumaita Binte Burhan  -->
 </body>
